fix post overflow styling

--- a/client/src/components/Posts/Post/Post.module.css
+++ b/client/src/components/Posts/Post/Post.module.css
@@ -204,7 +204,7 @@
 }
 
 .postModalContainer > div:first-child {
-  overflow: scroll;
+  overflow-y: auto;
   flex: 1;
   padding-bottom: 0;
 }
